# FFPy

./: .env.example  .gitignore  AI-CONTEXT.md  CONTRIBUTING.md  Makefile  QUICKSTART.md  README.md  SETUP.md  TESTING.md  demo_projections.py  install.bat  pyproject.toml  run.bat
.claude/: settings.local.json
config/: README.md
config/roster/: no_kicker_dst.json  standard.json  superflex.json
config/scoring/: half_ppr.json  ppr.json  standard.json
data/exports/: full_stats_2024.csv  player_averages_2024.csv  team_averages_2024.csv  team_current_form_2024.csv  team_stats_weekly_2024.csv
docs/: NEW_MATH_GRAD_GUIDE.md  OPTIMIZATION_LIBRARIES_GUIDE.md  PHASE_1_SUMMARY.md  PHASE_2_SUMMARY.md  STREAMLIT_PLAYER_COMPARISON_GUIDE.md  STREAMLIT_UI_SUMMARY.md
docs/db/: DATABASE_GUIDE.md
docs/db/GamePlays/: DataResearch.MD
docs/integration/espn/: ESPN_API_INTEGRATION_GUIDE.md  ESPN_INTEGRATION_QUICKSTART.md
docs/integration/espn/pickem/: PICKEM_PLATFORMS_GUIDE.md  PICKEM_QUICKSTART.md
docs/security/: SUPABASE_HARDENED_IMPLEMENTATION_PLAN.md  supabase_auth_schema_starter.sql
docs/streamlit/: STREAMLIT_PLAYER_COMPARISON_GUIDE.md
examples/: espn_league_example.py  optimize_lineup_example.py  pickem_example.py  play_analysis_example.py
notebooks/: README.md  xpress_vs_pulp_ff_lineup.ipynb
notebooks/eda/: GamePlays.ipynb  Players.ipynb  Teams.ipynb
scripts/: bootstrap.sh  check_supabase.py  collect_historical_stats.py  generate_mock_2024_data.py  optimize_lineup.py  populate_plays.py
src/ffpy/: __init__.py  app.py  auth.py  cli.py  config.py  data.py  database.py  dev_auth_token.py  mock.py  nflverse_loader.py  optimizer.py  pickem.py  pickem_backtest.py  pickem_optimizer.py  pickem_web.py  projections.py  scoring.py  usage_logging.py
src/ffpy/integrations/: __init__.py  base.py  espn.py  espn_league.py  sportsdata.py
src/ffpy/migrations/: 001_initial_schema.sql  002_play_by_play_schema.sql  003_backtest_schema.sql
src/ffpy/pages/: 1_🔍_Player_Comparison.py  2_🏈_Pick'em_Analyzer.py  3_⚡_Lineup_Optimizer.py
src/ffpy/repositories/: __init__.py  base.py  sqlite_games.py
src/ffpy/web/pickem_tester/: app.js  index.html  styles.css
tests/: __init__.py  test_dev_auth_token.py  test_optimizer.py  test_pickem_api.py  test_pickem_backtest.py  test_pickem_backtest_data.py  test_pickem_optimizer.py  test_scoring.py
