[project]
name = "ffpy"
version = "0.1.0"
description = "Fantasy Football Point Projection Web App"
readme = "README.md"
authors = [
    { name = "RickArko", email = "rick.arko17@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.40.0",
    "fastapi>=0.116.1",
    "PyJWT[crypto]>=2.10.1",
    "uvicorn>=0.35.0",
    "pandas>=2.2.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "polars>=1.36.1",
    "duckdb>=1.4.3",
    "pulp>=3.3.0",
    "plotly>=6.5.0",
    "nflreadpy",
    "tqdm>=4.67.1",
    # Pin ipykernel to 6.x — 7.x has protocol changes that hang notebooks
    # with some jupyter_client/jupyterlab combinations.
    "ipykernel>=6.29.5,<7",
]

[project.scripts]
ffpy = "ffpy.app:main"
ffpy-db = "ffpy.cli:main"
ffpy-pickem-web = "ffpy.pickem_web:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "coverage>=7.13.0",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]
analysis = [
    "jupyter>=1.0.0",
    "matplotlib~=3.10",
    "seaborn>=0.13.0",
    "numpy>=1.26.0",
]

[tool.ruff]
line-length = 110
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.uv.sources]
nflreadpy = { git = "https://github.com/nflverse/nflreadpy" }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/ffpy"]
branch = true
omit = ["*/migrations/*", "*/pages/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 1
